chandeliers-lus/tests/compile_fail/ui/tc/all-tup.rs
chandeliers_lus::decl! {
    node foo(x, y, z : int) returns (a, b, c : bool);
    let (a, b, c) = (x, y, z); tel
}

fn main() {}
